fix spacing

--- a/style.css
+++ b/style.css
@@ -51,16 +51,13 @@ h1 {
   margin-top: 0px;
   margin-bottom: 10px;
   height: 200px;
-  width: 165px;
+  width: 200px;
   text-align: center;
 }
 
 #countdown-number {
   color: #00395d;
   font-size: 64px;
-  width: 120px;
-  /* border: 1px solid red; */
-  margin-left: -65px;
   text-align: left;
   font-weight: 200;
   letter-spacing: -1px;
